--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "llvm"]
 	path = llvm
 	url = git@github.com:eblot/llvm.git
+[submodule "compiler-rt"]
+	path = compiler-rt
+	url = git@github.com:eblot/compiler-rt.git
