--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "compiler-rt"]
 	path = compiler-rt
 	url = git@github.com:eblot/compiler-rt.git
+[submodule "clang"]
+	path = clang
+	url = git@github.com:eblot/clang.git
