--- a/.gitmodules
+++ b/.gitmodules
@@ -1,12 +1,12 @@
 [submodule "llvm"]
 	path = llvm
-	url = ../llvm.git
+	url = ./llvm.git
 [submodule "compiler-rt"]
 	path = compiler-rt
-	url = ../compiler-rt.git
+	url = ./compiler-rt.git
 [submodule "clang"]
 	path = clang
-	url = ../clang.git
+	url = ./clang.git
 [submodule "newlib"]
 	path = newlib
-	url = ../newlib.git
+	url = ./newlib.git
